2007-07-04  Adam Roben  <aroben@apple.com>

        Move tooltip logic down into WebCore so that it can be shared cross-platform

        Reviewed by Sam.

        * WebCoreSupport/WebChromeClient.h:
        * WebCoreSupport/WebChromeClient.mm:
        (WebChromeClient::setToolTip): Added.
        * WebView/WebHTMLView.mm: Removed _resetCachedWebPreferences.
        (-[WebHTMLView _updateMouseoverWithEvent:]): Removed tooltip code.
        (-[WebHTMLView initWithFrame:]): Removed call to
        _resetCachedWebPreferences.
        (-[WebHTMLView setDataSource:]): Ditto.
        * WebView/WebHTMLViewInternal.h: Removed showsURLsInToolTips ivar.
        * WebView/WebHTMLViewPrivate.h: Added declaration for _setTooltip so
        that WebChromeClient can call it.

2007-07-04  Adam Roben  <aroben@apple.com>

        Initialize Settings::showsURLsInToolTips

        Reviewed by Sam.

        * WebView/WebView.mm:
        (-[WebView _updateWebCoreSettingsFromPreferences:]):

2007-07-04  Adam Roben  <aroben@apple.com>

        Removed call to mouseDidMoveOverElement now that WebCore handles it

        Reviewed by Sam.

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _updateMouseoverWithEvent:]):

2007-07-04  Adam Roben  <aroben@apple.com>

        Add WebChromeClient::mouseDidMoveOverElement

        This is not called yet.

        Reviewed by Sam.

        * WebCoreSupport/WebChromeClient.h:
        * WebCoreSupport/WebChromeClient.mm:

2007-07-03  Darin Adler  <darin@apple.com>

        * StringsNotToBeLocalized.txt: Updated for recent changes.

2007-07-03  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin.

        Remove HIWebView in 64-bit.

        Also disable a few calls that are now gone in 64-bit and filed these bugs:

        <rdar://problem/5311653> WebKit needs to adopt HIGetMousePosition where we used GetGlobalMouse before
        <rdar://problem/5311648> WebKit needs to move off of CopyEvent in WebBaseNetscapePluginView